--- a/src/app/createaccount/createaccount.page.html
+++ b/src/app/createaccount/createaccount.page.html
@@ -71,7 +71,13 @@
                 </ng-container> -->
 
 
+                <ion-item>
+                    <ion-label position=" ">Admin</ion-label>
+                  
+                    <ion-checkbox checked="false" formControlName="role"></ion-checkbox>
 
+
+                </ion-item>
                 <ion-button [disabled]="!registerForm.valid" type="submit" shape="round">Register</ion-button>
                 <h4>back to Sign in</h4>
             </form>
