--- a/src/app/pages/customerinformation/customerinformation.page.html
+++ b/src/app/pages/customerinformation/customerinformation.page.html
@@ -25,8 +25,34 @@
                 </ion-item>
                 <ion-button class="cancelbtn" type="submit" size="medium">Submit</ion-button>
             </div>
+            <div class="tablename" style="overflow-x:auto;" *ngIf="userList">
+                {{userList | json}}
+                <table>
+                    <tr>
+                        <th>Name</th>
+                        <th>Phone On</th>
+                        <th>address</th>
+                        <th>Last Visit</th>
+                        <th>Next Visit</th>
+                        <th>Next Visit</th>
+                      <!--   <th>Advance</th> -->
 
-            {{userList |json}}
+                    </tr>
+                    <tr>
+                        <td>{{userList.name}}</td>
+                        <td>{{userList.phone}}</td>
+                        <td>{{userList.address}}</td>
+
+                       <!--  <td>{{userList.upcomming_visit.vistedDate | date:'fullDate'}}</td>
+                        <td>{{userList.visitng[0].last_visit | date:'fullDate'}}</td>
+                        <td>{{userList.upcomming_visit[0].next_visit | date:'fullDate'}}</td> -->
+                        <!--    <td>{{userList.grand_total}}</td>
+                        <td>{{userList.discount}}</td> -->
+
+                    </tr>
+                </table>
+            </div>
+
         </div>
     </form>
 </ion-content>
