--- a/src/app/pages/orderform/orderform.page.html
+++ b/src/app/pages/orderform/orderform.page.html
@@ -141,7 +141,8 @@
                         <ion-col size=5>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.lens_price.errors }">
                                 <ion-label position="floating">Lens Price</ion-label>
-                                <ion-input placeholder='2000' type="number" formControlName="lens_price"></ion-input>
+                                <ion-input placeholder='2000' type="number" formControlName="lens_price"
+                                    (ngModelChange)="updateCalc()"></ion-input>
                             </ion-item>
                         </ion-col>
                     </ion-row>
@@ -155,13 +156,15 @@
                         <ion-col size=4>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.tint_discount.errors }">
                                 <ion-label position="floating">Tint Discount</ion-label>
-                                <ion-input type="number" formControlName="tint_discount"></ion-input>
+                                <ion-input type="number" formControlName="tint_discount" (ngModelChange)="updateCalc()">
+                                </ion-input>
                             </ion-item>
                         </ion-col>
                         <ion-col size=4>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.lens_tax.errors }">
                                 <ion-label position="floating">TAX/GST%</ion-label>
-                                <ion-input type="number" formControlName="lens_tax"></ion-input>
+                                <ion-input type="number" formControlName="lens_tax" (ngModelChange)="updateCalc()">
+                                </ion-input>
                             </ion-item>
                         </ion-col>
                     </ion-row>
@@ -182,7 +185,8 @@
                         <ion-col size=4>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.frame_price.errors }">
                                 <ion-label position="floating">Frame Price</ion-label>
-                                <ion-input type="number" formControlName="frame_price"></ion-input>
+                                <ion-input type="number" formControlName="frame_price" (ngModelChange)="updateCalc()">
+                                </ion-input>
                             </ion-item>
                         </ion-col>
                     </ion-row>
@@ -196,14 +200,16 @@
                         <ion-col size=4>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.frame_discount.errors }">
                                 <ion-label position="floating">Frame Discount</ion-label>
-                                <ion-input type="number" formControlName="frame_discount"></ion-input>
+                                <ion-input type="number" formControlName="frame_discount"
+                                    (ngModelChange)="updateCalc()"></ion-input>
                             </ion-item>
 
                         </ion-col>
                         <ion-col size=4>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.frame_tax.errors }">
                                 <ion-label position="floating">TAX/GST%</ion-label>
-                                <ion-input type="number" formControlName="frame_tax"></ion-input>
+                                <ion-input type="number" formControlName="frame_tax" (ngModelChange)="updateCalc()">
+                                </ion-input>
                             </ion-item>
                         </ion-col>
                     </ion-row>
@@ -325,7 +331,8 @@
                         <ion-col size=3>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.advance.errors }">
                                 <ion-label position="floating">Advance</ion-label>
-                                <ion-input placeholder="0" type="number" formControlName="advance"></ion-input>
+                                <ion-input placeholder="0" type="number" formControlName="advance"
+                                    (ngModelChange)="updateCalc()"></ion-input>
                             </ion-item>
                         </ion-col>
                     </ion-row>
@@ -337,28 +344,30 @@
                                 <ion-input placeholder="0" type="number" formControlName="balance"></ion-input>
                             </ion-item>
                         </ion-col>
-                        <ion-col size=2></ion-col>
+                        <!--  <ion-col size=2></ion-col>
                         <ion-col size=5>
-                            <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.next_visit.errors }">
-                                <ion-label position="floating">Next Visit Date</ion-label>
-                                <ion-datetime formControlName="next_visit"></ion-datetime>
-                            </ion-item>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size=7>
-                            <ion-item lines='none'>
-                                <ion-label position="floating">Referred By</ion-label>
-                                <ion-input formControlName="refered_by"></ion-input>
-                            </ion-item>
-                        </ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col size=6>
                             <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.grand_total.errors }">
                                 <ion-label position="floating">Grand Total</ion-label>
                                 <ion-input type="number" formControlName="grand_total"></ion-input>
                             </ion-item>
+                        </ion-col> -->
+                    </ion-row>
+                    <ion-row>
+                        <ion-col size=7>
+                            <ion-item lines='none' [ngClass]="{ 'is-invalid': submitted && f.next_visit.errors }">
+                                <ion-label position="floating">Next Visit Date</ion-label>
+                                <ion-datetime formControlName="next_visit"></ion-datetime>
+                            </ion-item>
+
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col size=6>
+                            <ion-item lines='none'>
+                                <ion-label position="floating">Referred By</ion-label>
+                                <ion-input formControlName="refered_by"></ion-input>
+                            </ion-item>
+
                         </ion-col>
                         <ion-col size=6>
                             <ion-item class="select" lines='none'
