--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -17,44 +17,48 @@
     </div>
     <div class="orders"></div>
     <div class="form ion-text-center">
+        <form [formGroup]="orderForm">
 
-        <ion-item class="select" lines='none'>
-            <ion-label>Filler by status</ion-label>
-            <ion-select>
-                <ion-select-option value="Pending">Pending</ion-select-option>
-                <ion-select-option value="Fitting">Fitting</ion-select-option>
-                <ion-select-option value="Ready to Deliver">Ready to Deliver</ion-select-option>
-                <ion-select-option value="Delivered">Delivered</ion-select-option>
-            </ion-select>
+            <ion-item class="select" lines='none'>
+                <ion-label>Filler by status</ion-label>
+                <ion-select formControlName="delivery_status">
+                    <ion-select-option value="pending">Pending</ion-select-option>
+                    <ion-select-option value="fitting">Fitting</ion-select-option>
+                    <ion-select-option value="ready">Ready to Deliver</ion-select-option>
+                    <ion-select-option value="delivered">Delivered</ion-select-option>
+                </ion-select>
 
-        </ion-item>
-        <ion-grid>
-            <ion-row>
-                <ion-col size=6>
-                    <ion-item lines='none'>
-                        <ion-input placeholder='Order No/Customer info'></ion-input>
-                    </ion-item>
-                </ion-col>
-                <ion-col size=6>
-                    <ion-item lines='none'>
-                        <ion-input type="date"></ion-input>
-                    </ion-item>
-                </ion-col>
+            </ion-item>
+            <ion-grid>
+                <ion-row>
+                    <ion-col size=6>
+                        <ion-item lines='none'>
+                            <ion-input placeholder='Order No/Customer info' formControlName="customer"></ion-input>
+                        </ion-item>
+                    </ion-col>
+                    <ion-col size=6>
+                        <ion-item lines='none'>
+                            <ion-input type="date" formControlName="date"></ion-input>
+                        </ion-item>
+                    </ion-col>
 
-            </ion-row>
-            <ion-row>
-                <ion-col size=4>
-                    <ion-button class="search" size=small>Search</ion-button>
-                </ion-col>
-                <ion-col size=4>
-                    <ion-button class="export" size=small>Export</ion-button>
-                </ion-col>
-                <ion-col size=4>
-                    <ion-button class="reset" size=small>Reset</ion-button>
-                </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col size=4>
+                        <ion-button class="search" (click)="search()" size=small>Search</ion-button>
+                    </ion-col>
+                    <ion-col size=4>
+                        <ion-button class="export" (click)="export()" size=small>Export</ion-button>
+                    </ion-col>
+                    <ion-col size=4>
+                        <ion-button class="reset" size=small>Reset</ion-button>
+                    </ion-col>
 
-            </ion-row>
-        </ion-grid>
+                </ion-row>
+            </ion-grid>
+        </form>
+
+
         <div class="tablename" style="overflow-x:auto;">
             <table>
                 <tr>
