--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -19,8 +19,9 @@
         <div class="firstbox">
             <div class="today">Today</div>
             <div class="ordersvalue">
-                <div class="orders">Order<span style="display:block;margin-top:15px;">0</span></div>
-                <div class="orders">Value<span style="display:block;margin-top:15px;">0</span></div>
+                <div class="orders">Order<span style="display:block;margin-top:15px;">{{todaycount}}</span>
+                </div>
+                <div class="orders">Value<span style="display:block;margin-top:15px;">{{todayValue}}</span></div>
             </div>
 
         </div>
@@ -32,9 +33,9 @@
         <div class="secondbox">
             <div class="todaypayment">Today Payment</div>
             <div class="ordersvalue2">
-                <div class="orders1">Advance<span style="display:block;margin-top:15px;">0</span></div>
-                <div class="orders1">Balance<span style="display:block;margin-top:15px;">0</span></div>
-                <div class="orders1">Settled<span style="display:block;margin-top:15px;">0</span></div>
+                <div class="orders1">Advance<span style="display:block;margin-top:15px;">{{todayAdvance}}</span></div>
+                <div class="orders1">Balance<span style="display:block;margin-top:15px;">{{todayBalance}}</span></div>
+                <div class="orders1">Settled<span style="display:block;margin-top:15px;">{{todaySettled}}</span></div>
             </div>
 
 
@@ -46,8 +47,8 @@
         <div class="thirdbox">
             <div class="total">Total</div>
             <div class="ordersvalue4">
-                <div class="orders2">Orders<span style="display:block;margin-top:15px;">0</span></div>
-                <div class="orders2">Value<span style="display:block;margin-top:15px;">0</span></div>
+                <div class="orders2">Orders<span style="display:block;margin-top:15px;">{{totalValue}}</span></div>
+                <div class="orders2">Value<span style="display:block;margin-top:15px;">{{totalcount}}</span></div>
 
             </div>
 
