--- a/src/app/pages/ordersdetails/ordersdetails.component.html
+++ b/src/app/pages/ordersdetails/ordersdetails.component.html
@@ -3,7 +3,7 @@
   <ion-buttons slot="end">
     <ion-menu-button></ion-menu-button>
   </ion-buttons>
-  <ion-icon slot="start" name="arrow-back"></ion-icon>
+  <ion-icon slot="start" name="arrow-back" routerLink="/orders"></ion-icon>
 </ion-toolbar>
 
 <ion-content>
