--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -2,15 +2,15 @@
 
     <ion-title>Blue Vision</ion-title>
     <ion-buttons slot="end">
-        <ion-menu-button></ion-menu-button>
+        <ion-menu-button (click)=getmenu()></ion-menu-button>
     </ion-buttons>
-    <ion-icon slot="start" name="arrow-back"></ion-icon>
+    <!-- <ion-icon slot="start" name="arrow-back"></ion-icon> -->
 </ion-toolbar>
 
 <ion-content [fullscreen]="true">
     <ion-header collapse="condense">
         <ion-toolbar>
-            <ion-title size="large">{{ folder }}</ion-title>
+            <ion-title size="large"></ion-title>
         </ion-toolbar>
     </ion-header>
 
