--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,10 +1,9 @@
 <ion-toolbar>
-
     <ion-title>Blue Vision</ion-title>
     <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-icon slot="start" name="arrow-back"></ion-icon>
+    <ion-icon slot="start" routerLink="/orders" name="arrow-back"></ion-icon>
 </ion-toolbar>
 <ion-content>
     <div>
