--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="end">
         <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-icon slot="start" name="arrow-back"></ion-icon>
+    <ion-icon slot="start" routerLink="/dashboard" name="arrow-back"></ion-icon>
 </ion-toolbar>
 <ion-content>
     <div>
