--- a/src/app/pages/report/report.page.html
+++ b/src/app/pages/report/report.page.html
@@ -1,9 +1,86 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title>Report</ion-title>
-    </ion-toolbar>
-</ion-header>
+<ion-toolbar>
+    <ion-title>Blue Vision</ion-title>
+    <ion-buttons slot="end">
+        <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-icon slot="start" name="arrow-back"></ion-icon>
+</ion-toolbar>
 
 <ion-content>
+    <form [formGroup]="orderForm">
 
+        <div>
+            <h2>Reports</h2>
+        </div>
+        <div class="form ion-text-center">
+            <ion-grid>
+                <ion-list>
+                    <ion-radio-group formControlName="reportfor">
+                        <ion-row>
+                            <ion-col size=6>
+                                <ion-item>
+                                    <ion-label>Weekly Report</ion-label>
+                                    <ion-radio slot="start" color="success" value="Weekly Report"></ion-radio>
+                                </ion-item>
+                            </ion-col>
+
+                            <ion-col size=6>
+                                <ion-item>
+                                    <ion-label>Monthly Report</ion-label>
+                                    <ion-radio slot="start" color="success" value="Monthly Report"></ion-radio>
+                                </ion-item>
+                            </ion-col>
+                        </ion-row>
+                    </ion-radio-group>
+                </ion-list>
+                <ion-row class="dates">
+                    <ion-col size=6>
+                        <ion-item lines='none'>
+                            <ion-label position="floating">Start Date</ion-label>
+                            <ion-datetime formControlName="from"></ion-datetime>
+                        </ion-item>
+                    </ion-col>
+                    <ion-col size=6>
+                        <ion-item lines='none'>
+                            <ion-label position="floating">End Date</ion-label>
+                            <ion-datetime formControlName="to"></ion-datetime>
+                        </ion-item>
+                    </ion-col>
+                </ion-row>
+                <ion-button class="submitbtn" (click)="submit()" size="medium">Submit</ion-button>
+            </ion-grid>
+            <div class="tablename" style="overflow-x:auto;">
+                <table>
+                    <tr>
+                        <th>Order number</th>
+                        <th>Order Date</th>
+                        <th>Customer Name</th>
+                        <th>Cus Phone No</th>
+                        <th>Lens Type</th>
+                        <th>Lens Price</th>
+                        <th>Lens Brand</th>
+                        <th>Frame Type</th>
+                        <th>Frame Price</th>
+                        <!-- <th>Frame Brand</th> -->
+                        <th>Total Amount</th>
+                        <th>Order Taken By</th>
+                    </tr>
+                    <tr *ngFor="let order of orderList">
+                        <td>{{order.order_id}}</td>
+                        <td>{{order.created | date:'fullDate'}}</td>
+                        <td>{{order.customer_name}}</td>
+                        <td>{{order.customer_phone}}</td>
+                        <td>{{order.lens_type}}</td>
+                        <td>{{order.lens_price}}</td>
+                        <td>{{order.frame_brand}}</td>
+                        <td>{{order.frame_type}}</td>
+                        <td>{{order.frame_price}}</td>
+                        <!-- <td>{{order.brans}}</td> -->
+                        <td>{{order.total_amount}}</td>
+                        <td>{{order.employee_id.name}}</td>
+
+                </table>
+            </div>
+        </div>
+    </form>
 </ion-content>
